fixed img issue on safari

--- a/src/Pages/Landing/Landing.css
+++ b/src/Pages/Landing/Landing.css
@@ -13,9 +13,6 @@
     position: sticky;
     top: 0px;
   }
-  img {
-    object-fit: contain;
-  }
 }
 
 .description {
@@ -85,7 +82,6 @@
   width: 40%;
   padding: 50px 0px 50px 50px;
   background-color: var(--cream);
-  object-fit: contain;
 }
 
 .logo-left-overlay {
@@ -165,9 +161,6 @@
     align-items: center;
     height: 50vh;
     width: 70vw;
-    .img {
-      object-fit: contain;
-    }
   }
   .logo-left-overlay {
     display: flex;
